# retail-datalake-fpa-platform

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
api/: __init__.py  main.py  pdv.py  repository.py
app_vendas/: __init__.py  datalake_service.py  main.py  models.py  venda_service.py
config/: __init__.py  lojas_config.json  orcamento_config.json  produtos_config.json  settings.py
dags/: __init__.py  dag_utils.py  etl_vendas_fpa_dag.py
dashboards/: metricas_dashboard.md  powerbi_model.md
database/: queries_analiticas.sql  schema.sql  seed_dim_tempo.sql  seed_lojas.sql  seed_orcamento.sql  seed_produtos.sql  views.sql
database/migrations/: 001_initial_schema.sql  002_expand_customer_business_key.sql  003_normalize_portuguese_labels.sql
docs/: API_REFERENCE.md  ARQUITETURA_E_OPERACAO.md  DIAGRAMA_FLUXO.md  GUIA_PDV.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
notebooks/: 01_analise_exploratoria.ipynb  02_validacao_qualidade.ipynb  03_indicadores_fpa.ipynb
scripts/: __init__.py  backfill.py  data_quality.py  dre.py  extract.py  fpa.py  generate_sales_data.py  kpis.py  load.py  logger_config.py  run_pipeline.py  transform.py  utils.py  validate.py
tests/: conftest.py
tests/integration/: test_load_postgres.py  test_pipeline_end_to_end.py
tests/unit/: test_api_main.py  test_data_quality.py  test_forecast_repository.py  test_generate_sales_data.py  (+4 more)
(+29 files in other folders)
