[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-datalake-fpa-platform"
version = "1.0.0"
description = "Data Lake and FP&A analytics platform for RetailCo."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["config*", "scripts*", "app_vendas*", "dags*", "api*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
